--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Fran Álvarez de Diego - Software Developer</title>
+    <title>Fran Álvarez de Diego - Software Engineer</title>
 
     <link rel="shortcut icon" href="./assets/img/favicon/favicon.ico">
 
@@ -19,12 +19,6 @@
     <link href="./assets/css/common.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
 
-    <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
-    <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
     <div class="resume-wrapper">
@@ -32,7 +26,7 @@
       <!-- header -->
       <header>
         <h1 class="heading-container">Fran Álvarez de Diego</h1>
-        <h2 class="name-container">Software Developer</h2>
+        <h2 class="name-container">Software Engineer</h2>
         <h3 class="job-container"></h3>
         <div class="contact-container">
           <ul class="contact-list">
@@ -83,7 +77,7 @@
               <h2>experience</h2>
               <ul>
                 <li>
-                  <h3>Software Developer</h3>
+                  <h3>Software Engineer</h3>
                   <h4 class="company">Minube</h4>
                   <span class="date">Jun 2015 - present</span>
                   <p class="detail">
