--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
         <div class="contact-container">
           <ul class="contact-list">
             <li>
-              <a href="tel:01000000000">+34 657 10 79 63</a>
+              <a href="tel:+34657107963">+34 657 10 79 63</a>
               <span><i class="fa fa-phone" aria-hidden="true"></i></span>
             </li>
             <li>
               <a href="mailto:fjalvarez@gmail.com">fjalvarez@gmail.com</a>
               <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/franalvarezdediego/" target="_blank">LinkedIn</a>
+              <span><i class="fa fa-linkedin-in" aria-hidden="true"></i></span>
             </li>
             <li>
               <a href="https://www.franalvarezdediego.com" target="_blank">https://www.franalvarezdediego.com</a>
