--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
             <li>
               <a href="https://www.linkedin.com/in/franalvarezdediego/" target="_blank">LinkedIn</a>
-              <span><i class="fa fa-linkedin-in" aria-hidden="true"></i></span>
+              <span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
             </li>
             <li>
               <a href="https://www.franalvarezdediego.com" target="_blank">https://www.franalvarezdediego.com</a>
