--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <h4 class="company">Minube</h4>
                   <span class="date">Jun 2015 - present</span>
                   <p class="detail">
-                    - Maintain Java Backend using Spring REST API for several services like booking metasearch applications<br>
+                    - Work on Java Backend using Spring REST API for several services like booking metasearch applications<br>
                     - Build a new PHP REST API that serves content for both website and mobile applications on PhalconPHP<br>
                     - Create a system that is able to recognize the POIs visited by an user based on picture recognition and geo-positioning algorithm<br>
                     - Build algorithms to personalize user experience based on user geo positioning information, adapting web navigation, mobile push content and mailing<br>
